<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00008577"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"



        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <androidx.cardview.widget.CardView
            android:id="@+id/your_notes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bus"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/your_notes"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/bus"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/your_notes"
                    tools:ignore="ContentDescription" />
                <!--                        app:srcCompat="@drawable/your_notes" />-->
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/upload_notes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="Upload Notes"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/upload_notes"
                    tools:ignore="ContentDescription" />
                <!--                        app:srcCompat="@drawable/upload_notes" />-->
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <!--            app:srcCompat="@drawable/home2" />-->

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="289dp"
        android:layout_height="134dp"
        android:layout_marginTop="90dp"
        android:elevation="20dp"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Notes Nest"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:ignore="HardcodedText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:background="#FFC107"
        android:orientation="horizontal"
        app:cardBackgroundColor="#FFC107"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <AutoCompleteTextView
            android:id="@+id/autocompletetextview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_notes"

            android:inputType="textPersonName"
            android:textColor="#E4DCDC"
            android:textColorHint="#FDFDFD">

        </AutoCompleteTextView>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="340dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/search_icon"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            app:cardBackgroundColor="#3F51B5"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.254"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintVertical_bias="0.938">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="center|center_vertical"
                android:drawableStart="@drawable/like_us"
                android:drawablePadding="10dp"
                android:drawableTint="#E8FFFFFF"
                android:gravity="center"
                android:text="@string/like_us"
                android:textColor="#F0FFFFFF"
                android:textSize="17sp"
                tools:ignore="UseCompatTextViewDrawableXml"
                tools:targetApi="m" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>